--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
 * Bitsel
-/bitsel/ is a header-only C++14 library provides a class ~bits~ that represents a variable-size sequence of bits.
+/bitsel/ is a header-only C++17 library provides a class ~bits~ that represents a variable-size sequence of bits.
 
 Inspired from ~std::bitset~ and [[https://github.com/chipsalliance/chisel3][chisel3]]-like syntax of data representation and operations.
 
 ** Features
-+ C++14
++ C++17
 + Header-only
 + Dependency-free
 + MIT License
@@ -59,11 +59,5 @@ int main()
 You can refer [[file:example/][example]] for more examples.
 
 ** Integration
-
-** Compiler compatibility
-
-** Roadmap
-
-** Changelog
-
-** Acknowledgements
+1. Copy the file [[file:include/bitsel.hpp][bitsel.hpp]] into your project.
+2. Done!
